--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -90,6 +90,7 @@
     <Compile Include="ComplexTests\Complex32Test.TextHandling.cs" />
     <Compile Include="ComplexTests\ComplexTest.cs" />
     <Compile Include="ComplexTests\ComplexTest.TextHandling.cs" />
+    <Compile Include="CopulaTests\GaussianCopulaTests.cs" />
     <Compile Include="DifferentiationTests\FiniteDifferenceCoefficientsTests.cs" />
     <Compile Include="DifferentiationTests\NumericalDerivativeTests.cs" />
     <Compile Include="DifferentiationTests\NumericalHessianTests.cs" />
